--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="https://twitter.com/palestinian.nft" target='_blank'>
+					<a href="https://twitter.com/palestinian_nft" target='_blank'>
 						<svg width="48" height="48" viewBox="0 0 2003.71 2013.65">
 							<path 
 							fill="social-icons"
