--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 	<div id="timer-running">
-		<a href="https://thepalestiniannft.github.io/home/">
+		<a href="https://thepalestinians.morrlabs.xyz">
 			<img class="logo" src="Images/logo.png">
 		</a>
 
@@ -106,7 +106,7 @@
 	</div> <!-- end timer-running -->
 
 	<div id="timer-end">
-			<a href="https://thepalestiniannft.github.io/home/">
+			<a href="https://thepalestinians.morrlabs.xyz">
 				<img class="logo2" src="Images/logo.png">
 			</a>
 
@@ -119,7 +119,7 @@
 			<img class="gif2" src="Images/Gif.gif">
 		</div>
 
-			<a href="https://thepalestiniannft.github.io/claim/" target='_blank'>
+			<a href="https://thepalestiniansclaim.morrlabs.xyz" target='_blank'>
 				<button class="button2">CLAIM</button>
 			</a>
 
