update landing page

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 </head>
 <body>
-	<div id="timer-running">
-		<a href="https://thepalestinians.morrlabs.xyz">
+	<!--<div id="timer-running">
+		<a href="https://thepalestiniannft.github.io/home/">
 			<img class="logo" src="Images/logo.png">
 		</a>
 
@@ -40,7 +40,7 @@
 			</ul>
 		</div> <!-- end main-content -->
 
-		<div class="gif-container">
+		<!--<div class="gif-container">
 			<img class="gif" src="Images/Gif.gif">
 		</div>
 
@@ -106,22 +106,23 @@
 	</div> <!-- end timer-running -->
 
 	<div id="timer-end">
-			<a href="https://thepalestinians.morrlabs.xyz">
+			<a href="https://thepalestiniannft.github.io/home/">
 				<img class="logo2" src="Images/logo.png">
 			</a>
 
 		<hgroup>
-			<h1>WE ARE LIVE</h1>
-			<p class="subtitle">CLAIM YOUR AVATAR, AND REPRESENT.</p>
+			<h1>COMING SOON</h1>
+			<!--<h1>WE ARE LIVE</h1>
+			<p class="subtitle">CLAIM YOUR AVATAR, AND REPRESENT.</p>-->
 		</hgroup>
 
 		<div class="gif-container">
 			<img class="gif2" src="Images/Gif.gif">
 		</div>
 
-			<a href="https://thepalestiniansclaim.morrlabs.xyz" target='_blank'>
+			<!--<a href="https://thepalestiniannft.github.io/home/" target='_blank'>
 				<button class="button2">CLAIM</button>
-			</a>
+			</a>-->
 
 		<footer>
 			<ul id="social-icons">
