update remove timer

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 </head>
 <body>
-	<!--<div id="timer-running">
-		<a href="https://thepalestiniannft.github.io/home/">
+	<div id="timer-running">
+		<!--<a href="https://thepalestiniannft.github.io/home/">
 			<img class="logo" src="Images/logo.png">
 		</a>
 
@@ -102,7 +102,7 @@
 				</li>
 			</ul>
 
-		</footer>
+		</footer>-->
 	</div> <!-- end timer-running -->
 
 	<div id="timer-end">
