--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
 			</a>
 
 		<hgroup>
-			<h1>COMING SOON</h1>
+			<h1>THE PALESTINIANS</h1>
+			<p class="subtitle">COMING SOON</p>
 			<!--<h1>WE ARE LIVE</h1>
 			<p class="subtitle">CLAIM YOUR AVATAR, AND REPRESENT.</p>-->
 		</hgroup>
